--- a/CarTrackTest/Base/Base.lproj/Main.storyboard
+++ b/CarTrackTest/Base/Base.lproj/Main.storyboard
@@ -55,11 +55,11 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="213"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Eq-v3-JE4">
+                                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Eq-v3-JE4">
                                             <rect key="frame" x="30" y="11" width="354" height="191"/>
                                             <subviews>
                                                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4Ag-ek-0Gb">
-                                                    <rect key="frame" x="8" y="8" width="40" height="40"/>
+                                                    <rect key="frame" x="8" y="42" width="40" height="40"/>
                                                     <subviews>
                                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3v7-id-bo5">
                                                             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
@@ -76,30 +76,52 @@
                                                     </constraints>
                                                 </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nu4-Xn-W2b">
-                                                    <rect key="frame" x="56" y="8" width="290" height="14.5"/>
+                                                    <rect key="frame" x="56" y="42" width="290" height="14.5"/>
                                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kgp-IB-FOE">
-                                                    <rect key="frame" x="56" y="32.5" width="290" height="18"/>
+                                                    <rect key="frame" x="56" y="66.5" width="290" height="18"/>
                                                     <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                                                     <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cqU-Lk-Qqj">
+                                                    <rect key="frame" x="0.0" y="0.0" width="354" height="30"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PWn-xb-Byo">
+                                                            <rect key="frame" x="8" y="4" width="338" height="22"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" secondItem="PWn-xb-Byo" secondAttribute="bottom" constant="4" id="7Sj-Im-eai"/>
+                                                        <constraint firstItem="PWn-xb-Byo" firstAttribute="top" secondItem="cqU-Lk-Qqj" secondAttribute="top" constant="4" id="86K-Vh-Akh"/>
+                                                        <constraint firstAttribute="trailing" secondItem="PWn-xb-Byo" secondAttribute="trailing" constant="8" id="AYP-k1-kVK"/>
+                                                        <constraint firstItem="PWn-xb-Byo" firstAttribute="leading" secondItem="cqU-Lk-Qqj" secondAttribute="leading" constant="8" id="jQj-6F-fZP"/>
+                                                        <constraint firstAttribute="height" constant="30" id="ykA-p0-3Tj"/>
+                                                    </constraints>
+                                                </view>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                             <constraints>
-                                                <constraint firstItem="4Ag-ek-0Gb" firstAttribute="top" secondItem="6Eq-v3-JE4" secondAttribute="top" constant="8" id="3bj-ar-uAs"/>
+                                                <constraint firstItem="4Ag-ek-0Gb" firstAttribute="top" secondItem="PWn-xb-Byo" secondAttribute="bottom" constant="16" id="0nC-y3-CBB"/>
                                                 <constraint firstItem="Nu4-Xn-W2b" firstAttribute="top" secondItem="4Ag-ek-0Gb" secondAttribute="top" id="3hJ-lG-in0"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Kgp-IB-FOE" secondAttribute="bottom" constant="16" id="4Ih-fi-oRj"/>
                                                 <constraint firstItem="4Ag-ek-0Gb" firstAttribute="leading" secondItem="6Eq-v3-JE4" secondAttribute="leading" constant="8" id="K1q-Da-ALI"/>
                                                 <constraint firstAttribute="trailing" secondItem="Kgp-IB-FOE" secondAttribute="trailing" constant="8" id="NzA-hU-pWD"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Kgp-IB-FOE" secondAttribute="bottom" constant="8" id="Oov-Ak-3AC"/>
                                                 <constraint firstItem="Kgp-IB-FOE" firstAttribute="leading" secondItem="Nu4-Xn-W2b" secondAttribute="leading" id="TyT-PK-odX"/>
+                                                <constraint firstAttribute="trailing" secondItem="cqU-Lk-Qqj" secondAttribute="trailing" id="Vpz-gj-vrJ"/>
+                                                <constraint firstItem="cqU-Lk-Qqj" firstAttribute="leading" secondItem="6Eq-v3-JE4" secondAttribute="leading" id="XbN-cQ-BBz"/>
                                                 <constraint firstItem="Nu4-Xn-W2b" firstAttribute="leading" secondItem="4Ag-ek-0Gb" secondAttribute="trailing" constant="8" id="cAi-Gf-ben"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="4Ag-ek-0Gb" secondAttribute="bottom" constant="16" id="d4x-hK-KoL"/>
                                                 <constraint firstItem="Kgp-IB-FOE" firstAttribute="top" secondItem="Nu4-Xn-W2b" secondAttribute="bottom" constant="10" id="dH2-Y5-Ynh"/>
+                                                <constraint firstItem="cqU-Lk-Qqj" firstAttribute="top" secondItem="6Eq-v3-JE4" secondAttribute="top" id="khC-Od-SSE"/>
                                                 <constraint firstAttribute="trailing" secondItem="Nu4-Xn-W2b" secondAttribute="trailing" constant="8" id="nkz-6W-9IB"/>
-                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="4Ag-ek-0Gb" secondAttribute="bottom" constant="8" id="nsa-1f-bUp"/>
                                             </constraints>
                                         </view>
                                     </subviews>
@@ -118,6 +140,7 @@
                                     <outlet property="ibProfileView" destination="3v7-id-bo5" id="ZxX-zX-kUY"/>
                                     <outlet property="lblTitle1" destination="Nu4-Xn-W2b" id="olv-a4-923"/>
                                     <outlet property="lblTitle2" destination="Kgp-IB-FOE" id="qg9-kd-r4e"/>
+                                    <outlet property="lblTitle3" destination="PWn-xb-Byo" id="KVL-6h-zlg"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
